[package]
name = "afarray"
version = "0.6.2"
authors = ["haydn@tinychain.net"]
edition = "2018"
license = "Apache-2.0"
description = "Convenience methods for working with ArrayFire arrays in Rust"
repository = "https://github.com/haydnv/collate"
readme = "README.md"

categories = ["algorithms", "data-structures", "hardware-support", "mathematics", "rust-patterns"]
keywords = ["array", "arrayfire", "gpu", "ndarray", "tensor"]

[build-dependencies]
pkg-config = "0.3"

[dependencies]
arrayfire = "3.8"
async-trait = "0.1"
destream = "0.4"
futures = "0.3"
num-complex = "0.2"
num-derive = "0.3"
num-traits = "0.2"
number-general = "~0.3.7"
pin-project = "1.0"
safecast = "0.1"
serde = "1.0"

[dev-dependencies]
tbon = "~0.2.1"
tokio = { version = "1.7", features=["macros", "rt"] }
