[package]
name = "afarray"
version = "0.15.1"
authors = ["code@tinychain.net"]
edition = "2021"
license = "Apache-2.0"
description = "Convenience methods for working with ArrayFire arrays in Rust"
repository = "https://github.com/haydnv/afarray"
readme = "README.md"

categories = ["algorithms", "data-structures", "hardware-support", "mathematics", "rust-patterns"]
keywords = ["array", "arrayfire", "gpu", "ndarray", "tensor"]

[dependencies]
arrayfire = "3.8"
async-trait = "0.1"
collate = { version = "~0.2.3", features=["complex"] }
destream = "0.6"
futures = "0.3"
get-size = "0.1"
num-complex = "0.2"
num-derive = "0.3"
num-traits = "0.2"
number-general = { version = "0.9", features=["serde", "stream"] }
pin-project = "1.0"
safecast = "~0.1.3"
serde = "1.0"

[dev-dependencies]
tbon = "0.4"
tokio = { version = "1.24", features=["macros", "rt"] }
